# dns-proxy-server

./: CMakeLists.txt  README.md  config_parser.c  config_parser.h  dns.h  main.c  server  server.c
config/: config.json
include/: config_parser.h  server.h
src/: config_parser.c  main.c  server.c
